# LPC3D

./: LPC3D.py  README.md  lattice_gas.inpt  lattice_gas_example_bulk.inpt  lattice_gas_example_electrode.inpt  lattice_gas_example_supercapacitor.inpt  pyproject.toml
.github/workflows/: pip_install.yml
examples/bulk/: Density_Energy_out_00000001.vti  Signal_smp_1.txt  density_1.txt  lattice_gas.inpt  log.lpc3d
examples/electrode/: Density_Energy_out_00000001.vti  Density_Energy_out_00000002.vti  Diffusion_coeff_x_1.txt  Diffusion_coeff_y_1.txt  Diffusion_coeff_z_1.txt  Signal_smp_1.txt  density_1.txt  lattice_gas.inpt  log.lpc3d  time_dep_Diffusion_coeff-D_over_D0_1.txt  vacf_1.txt  vacfx_1.txt  vacfy_1.txt  vacfz_1.txt
examples/short-test/: lattice_gas.inpt
examples/supercapacitor/: Density_Energy_out_00000001.vti  Density_Energy_out_00000002.vti  Diffusion_coeff_x_1.txt  Diffusion_coeff_x_2.txt  Diffusion_coeff_x_3.txt  Diffusion_coeff_y_1.txt  Diffusion_coeff_y_2.txt  Diffusion_coeff_y_3.txt  Diffusion_coeff_z_1.txt  Diffusion_coeff_z_2.txt  Diffusion_coeff_z_3.txt  Signal_smp_1.txt  Signal_smp_2.txt  Signal_smp_3.txt  density_1.txt  density_3.txt  lattice_gas.inpt  log.lpc3d  pore_dens_freq_2pos.txt  time_dep_Diffusion_coeff-D_over_D0_1.txt  time_dep_Diffusion_coeff-D_over_D0_2.txt  time_dep_Diffusion_coeff-D_over_D0_3.txt  vacf_1.txt  vacf_2.txt  vacf_3.txt  vacfx_1.txt  vacfx_3.txt  vacfy_1.txt  vacfy_3.txt  vacfz_1.txt  vacfz_2.txt  vacfz_3.txt
