[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LPC3D"
version = "0.1.0"
description = "A package for LPC3D functionality"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Céline Merlet", email = "celine.merlet.fr@gmail.com" },
    { name = "El Hassane Lahrar", email = "lahrar.el@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPL-3.0)"
]

dependencies = [
    'pystencils',
    'numba',
    'ipython',
    'matplotlib',
    'pyevtk',
]

[project.scripts]
lpc3d = "LPC3D:main" 

[project.optional-dependencies]
gpu = ["cupy-cuda"]
